--- a/index.html
+++ b/index.html
@@ -12,15 +12,28 @@
     <script src="https://www.gstatic.com/firebasejs/6.3.0/firebase-database.js"></script>
 
 
+    <!-- The core Firebase JS SDK is always required and must be listed first -->
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.2.7/firebase-database.js"></script>
+
+    <!-- TODO: Add SDKs for Firebase products that you want to use
+        https://firebase.google.com/docs/web/setup#available-libraries -->
+
     <script>
-      //Your web app's Firebase configuration
-
-      // // Initialize Firebase
-      // firebase.initializeApp(firebaseConfig);
-
-    // Initialize Firebase
-    firebase.initializeApp(firebaseConfig);
+      // Your web app's Firebase configuration
+      var firebaseConfig = {
+        apiKey: "AIzaSyAcdquOONOWrtB_jJ3pybmTX6neE0nOh98",
+        authDomain: "multi-player-car-racing-f5605.firebaseapp.com",
+        databaseURL: "https://multi-player-car-racing-f5605-default-rtdb.firebaseio.com",
+        projectId: "multi-player-car-racing-f5605",
+        storageBucket: "multi-player-car-racing-f5605.appspot.com",
+        messagingSenderId: "30163324324",
+        appId: "1:30163324324:web:e1d8ec25b6a6f452d40531"
+      };
+      // Initialize Firebase
+      firebase.initializeApp(firebaseConfig);
     </script>
+
 
     <script src="js/Player.js"></script>
     <script src="js/Form.js"></script>
